force-app/main/default/objects/Jopa__c/Jopa__c.object-meta.xml
<CustomObject>
    <label>Jopa</label>
    <nameField>
        <label>Jopa Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jopas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>