force-app/main/default/objects/Jopa__c/fields/Discription_of_your_jopa__c.field-meta.xml
<CustomField>
    <fullName>Discription_of_your_jopa__c</fullName>
    <label>Discription of your jopa</label>
    <length>50</length>
    <type>Text</type>
</CustomField>