force-app/main/default/objects/Jopa__c/fields/Jopa_Counts__c.field-meta.xml
<CustomField>
    <fullName>Jopa_Counts__c</fullName>
    <label>Jopa Counts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>