force-app/main/default/objects/Jopa__c/fields/Kind_of_Jopa__c.field-meta.xml
<CustomField>
    <fullName>Kind_of_Jopa__c</fullName>
    <label>Kind of Jopa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>white</fullName>
            </value>
            <value>
                <fullName>red</fullName>
            </value>
            <value>
                <fullName>black</fullName>
            </value>
            <value>
                <fullName>pink</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>