force-app/main/default/objects/Jopa__c/listViews/all_list.listView-meta.xml
<ListView>
    <fullName>all_list</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>all_list</label>
</ListView>