force-app/main/default/objects/Jopa__c/listViews/Jopa_list.listView-meta.xml
<ListView>
    <fullName>Jopa_list</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Jopa list</label>
</ListView>